--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   
   <!--Our CSS sheet-->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -56,7 +56,7 @@
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>  Download</button>
     </div>
     <div class="image-iphone col-lg-6 col-md-12 col-sm-12">
-      <img src="images/iphone6.png" alt="iphone-mockup" class="iphone">
+      <img src="iphone6.png" alt="iphone-mockup" class="iphone">
     </div>
     </div>
   </div>
@@ -95,12 +95,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
+          <img src="dog-img.jpg" alt="dog-profile" class="testimonial-image">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
       </div>
@@ -118,10 +118,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="logos" src="images/techcrunch.png" alt="tc-logo">
-    <img class="logos" src="images/tnw.png" alt="tnw-logo">
-    <img class="logos" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="logos" src="images/mashable.png" alt="mashable-logo">
+    <img class="logos" src="techcrunch.png" alt="tc-logo">
+    <img class="logos" src="tnw.png" alt="tnw-logo">
+    <img class="logos" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="logos" src="mashable.png" alt="mashable-logo">
 
   </section>
 
